--- a/myhtml.html
+++ b/myhtml.html
@@ -7,10 +7,12 @@
    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <style>
+   body {
+    background: #c7b39b }
   </style>
  </head>
  <body>
- <p><a href="dog.html"><em>Остальные 3 способа похудеть. ЖМИ!</em></a ></p>
+ <p><a href="file:///E:/pistrun/kek/a.jpg"><em>Остальные 3 способа похудеть. ЖМИ!</em></a ></p>
  
  <h1 align="middle" > 10 Способов сжечь 100 калорий за 10 минут.</h1>
  <ul>
@@ -33,7 +35,7 @@
   
 
 <p><big>Вы не потратите много энергии, просто стоя на поле, но интенсивная борьба за мяч, ускорения и дриблинг лишат вас 107 килокалорий за 10 минут. Также это отличная тренировка для всего тела, потому что она включает в себя много различных движений не только для ног, но и для других групп мышц.</p></big>
-<p><img align = "right" height = "450" src="file:///E:/pistrun/a.jpg" alt="JENHINAs"></p>
+<p><img align = "right" height = "450" src="a.jpg" alt=""></p>
   <li><h2 align = "left" ><font color = "gray" >5. Гантели</font> </li> </h2>
 
 
